--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 </head>
 <body>
 
+
+    <div class="principal">
+
     <nav class="navbar" role="navigation" aria-label="Menu principal">
-        <a href="#" class="logo">Nome da escola</a>
+        <a href="#" class="logo">Escola</a>
         <button class="menu-toggle" aria-controls="primary-navigation" aria-expanded="false" aria-label="Abrir menu">
           <span></span>
           <span></span>
@@ -24,6 +27,66 @@
           </div>
         </div>
       </nav>
+
+      <div class="formu">
+
+      <label for="nomeCompleto" class="form-label">Nome completo</label>
+      <input type="text" class="form-control" id="nomeCompleto" placeholder="Digite seu nome completo" required />
+    </div>
+
+    <div class="mb-3">
+      <label for="idade" class="form-label">Idade</label>
+      <input type="number" class="form-control" id="idade" min="1" max="120" placeholder="Digite sua idade" required />
+    </div>
+
+    <div class="mb-3">
+      <label for="serie" class="form-label">Série</label>
+      <select class="form-select" id="serie" required>
+        <option value="" disabled selected>Selecione a série</option>
+        <option value="1">1º ano</option>
+        <option value="2">2º ano</option>
+        <option value="3">3º ano</option>
+      </select>
+    </div>
+    
+    <div class="mb-3">
+      <label for="modalidade" class="form-label">Modalidade esportiva</label>
+      <select class="form-select" id="modalidade" required>
+        <option value="" disabled selected>Selecione a modalidade</option>
+        <option value="futsal">Futsal</option>
+        <option value="basquete">Basquete</option>
+        <option value="queimada">Queimada</option>
+      </select>
+    </div>
+
+    <div class="form-check mb-4">
+      <input class="form-check-input" type="checkbox" id="termos" required />
+      <label class="form-check-label" for="termos">
+        Aceito os termos
+      </label>
+    </div>
+    <button type="submit" class="btn btn-primary w-100">Enviar inscrição</button>
+  </form>
+
+    </div>
+
+  <aside class="asideh">
+    <p>A escola tem a satisfação de anunciar a realização do seu tão esperado Campeonato Esportivo entre turmas. Este evento visa promover a integração, o espírito esportivo e a competição saudável entre os alunos, incentivando a prática de atividades físicas e o trabalho em equipe. Será uma oportunidade única para os estudantes mostrarem seu talento em diversas modalidades esportivas e se divertirem junto aos colegas.</p>
+    <p>O campeonato contará com disputas emocionantes nas modalidades de futebol, vôlei, basquete, atletismo e queimada. Cada turma poderá inscrever equipes para participar das competições, e os jogos serão realizados em um ambiente seguro, sob a supervisão dos professores de educação física e organizadores do evento. As partidas terão regras claras e justas para garantir a melhor experiência para todos os participantes.</p>
+    <p>Para participar, todos os alunos matriculados na escola estão convidados a se inscrever. Seja você um atleta experiente ou alguém que queira apenas vivenciar a emoção do campeonato, este evento é para você! As inscrições poderão ser feitas por meio do site oficial da escola, onde será possível selecionar a modalidade desejada e a turma que você representa.</p>
+    <p>O prazo final para as inscrições é até o dia 15 de maio, e é fundamental que todos os interessados realizem sua inscrição dentro do prazo para garantir sua vaga no campeonato. O site disponibiliza todas as informações necessárias, incluindo regulamento, tabelas e programação das partidas, para facilitar a organização e participação de todos.</p>
+    <p>O Campeonato Esportivo será realizado entre os dias 1 e 5 de junho, com cerimônia de abertura na manhã do dia 1º. Contamos com a presença e entusiasmo de todos os alunos para fazer deste evento um grande sucesso, cheio de alegria, integração e saúde. Preparem-se para muita diversão e desafios, e que vençam as melhores turmas!</p>
+</aside>
+
+    </div>
+
+
+
+</div>
+
+
+
+</div>
     
 </body>
 </html>
