--- a/index.html
+++ b/index.html
@@ -1,92 +1,73 @@
-<!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-
     <title>Campeonato Escolar 2025</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <div id="contador" class="text-center mt-4"></div>
 
-
-    <div class="principal">
-
-    <nav class="navbar" role="navigation" aria-label="Menu principal">
-        <a href="#" class="logo">Escola</a>
-        <button class="menu-toggle" aria-controls="primary-navigation" aria-expanded="false" aria-label="Abrir menu">
-          <span></span>
-          <span></span>
-          <span></span>
-        </button>
-        <div>
-          <div class="nav-links" id="primary-navigation">
-            <a href="#inicio">Início</a>
-            <a href="#sobre-campeonato">Sobre o campeonato</a>
-            <a href="#inscreva-se">Inscreva-se</a>
-          </div>
-        </div>
-      </nav>
-
-      <div class="formu">
-
-      <label for="nomeCompleto" class="form-label">Nome completo</label>
-      <input type="text" class="form-control" id="nomeCompleto" placeholder="Digite seu nome completo" required />
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Escola</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#inicio">Início</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#sobre">Sobre o campeonato</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#inscricao">Inscreva-se</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <div id="inscricao">
+        <h2 class="text-center">Formulário de Inscrição</h2>
+        <form id="formInscricao">
+            <div class="form-group">
+                <label for="nomeCompleto">Nome completo</label>
+                <input type="text" class="form-control" id="nomeCompleto" placeholder="Digite seu nome completo" required>
+            </div>
+            <div class="form-group">
+                <label for="idade">Idade</label>
+                <input type="number" class="form-control" id="idade" min="1" max="120" placeholder="Digite sua idade" required>
+            </div>
+            <div class="form-group">
+                <label for="serie">Série</label>
+                <select class="form-control" id="serie" required>
+                    <option value="" disabled selected>Selecione a série</option>
+                    <option value="1">1º ano</option>
+                    <option value="2">2º ano</option>
+                    <option value="3">3º ano</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="modalidade">Modalidade esportiva</label>
+                <select class="form-control" id="modalidade" required>
+                    <option value="" disabled selected>Selecione a modalidade</option>
+                    <option value="futsal">Futsal</option>
+                    <option value="basquete">Basquete</option>
+                    <option value="queimada">Queimada</option>
+                </select>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="termos" required>
+                <label class="form-check-label" for="termos">Aceito os termos</label>
+            </div>
+            <button type="submit" class="btn btn-primary w-100" id="enviar">Enviar Inscrição</button>
+        </form>
     </div>
-
-    <div class="mb-3">
-      <label for="idade" class="form-label">Idade</label>
-      <input type="number" class="form-control" id="idade" min="1" max="120" placeholder="Digite sua idade" required />
-    </div>
-
-    <div class="mb-3">
-      <label for="serie" class="form-label">Série</label>
-      <select class="form-select" id="serie" required>
-        <option value="" disabled selected>Selecione a série</option>
-        <option value="1">1º ano</option>
-        <option value="2">2º ano</option>
-        <option value="3">3º ano</option>
-      </select>
-    </div>
-    
-    <div class="mb-3">
-      <label for="modalidade" class="form-label">Modalidade esportiva</label>
-      <select class="form-select" id="modalidade" required>
-        <option value="" disabled selected>Selecione a modalidade</option>
-        <option value="futsal">Futsal</option>
-        <option value="basquete">Basquete</option>
-        <option value="queimada">Queimada</option>
-      </select>
-    </div>
-
-    <div class="form-check mb-4">
-      <input class="form-check-input" type="checkbox" id="termos" required />
-      <label class="form-check-label" for="termos">
-        Aceito os termos
-      </label>
-    </div>
-    <button type="submit" class="btn btn-primary w-100">Enviar inscrição</button>
-  </form>
-
-    </div>
-
-  <aside class="asideh">
-    <p>A escola tem a satisfação de anunciar a realização do seu tão esperado Campeonato Esportivo entre turmas. Este evento visa promover a integração, o espírito esportivo e a competição saudável entre os alunos, incentivando a prática de atividades físicas e o trabalho em equipe. Será uma oportunidade única para os estudantes mostrarem seu talento em diversas modalidades esportivas e se divertirem junto aos colegas.</p>
-    <p>O campeonato contará com disputas emocionantes nas modalidades de futebol, vôlei, basquete, atletismo e queimada. Cada turma poderá inscrever equipes para participar das competições, e os jogos serão realizados em um ambiente seguro, sob a supervisão dos professores de educação física e organizadores do evento. As partidas terão regras claras e justas para garantir a melhor experiência para todos os participantes.</p>
-    <p>Para participar, todos os alunos matriculados na escola estão convidados a se inscrever. Seja você um atleta experiente ou alguém que queira apenas vivenciar a emoção do campeonato, este evento é para você! As inscrições poderão ser feitas por meio do site oficial da escola, onde será possível selecionar a modalidade desejada e a turma que você representa.</p>
-    <p>O prazo final para as inscrições é até o dia 15 de maio, e é fundamental que todos os interessados realizem sua inscrição dentro do prazo para garantir sua vaga no campeonato. O site disponibiliza todas as informações necessárias, incluindo regulamento, tabelas e programação das partidas, para facilitar a organização e participação de todos.</p>
-    <p>O Campeonato Esportivo será realizado entre os dias 1 e 5 de junho, com cerimônia de abertura na manhã do dia 1º. Contamos com a presença e entusiasmo de todos os alunos para fazer deste evento um grande sucesso, cheio de alegria, integração e saúde. Preparem-se para muita diversão e desafios, e que vençam as melhores turmas!</p>
-</aside>
-
-    </div>
-
-
-
-</div>
-
-
-
-</div>
-    
+</div> 
+<script src="script.js"></script>   
 </body>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 </html>
